- 施設編集に販売初期設定を追加

--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -70,7 +70,7 @@ MT-01
                                     <th>URL</th>
                                     <th>ルーム</th>
                                     <th>POS</th>
-                                    <th>販売条件</th>
+                                    <th>販売初期設定</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
@@ -83,8 +83,8 @@ MT-01
                                         </a>
                                     </td>
                                     <td name="parentOrganizationName|slice"">$parentOrganizationName$</td>
-                                    <td name="name.ja|slice">$name.ja$</td>
-                                    <td name="telephone">$telephone$</td>
+                                    <td name=" name.ja|slice">$name.ja$</td>
+                                    <td name="telephone|slice">$telephone$</td>
                                     <td name="url__url|slice">
                                         <a target="_blank" href="$url$">$url$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
