- イベント作成時の販売者を施設の親組織で自動設定するように調整

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -136,11 +136,7 @@
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label class="bmd-label-static">販売者</label>
-                                    <select class="form-control" name="seller">
-                                        <% for (seller of sellers) { %>
-                                        <option value="<%= seller.id %>"><%= seller.name.ja %></option>
-                                        <% } %>
-                                    </select>
+                                    <select class="form-control" name="seller"></select>
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-3">
