--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -16,6 +16,11 @@
                     基本設定
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
+                    追加特性
+                </a>
+            </li>
         </ul>
 
         <div class="tab-content">
@@ -64,7 +69,7 @@
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="name[ja]" class="bmd-label-static">
                             名称<span class="text-danger">＊</span>
                         </label>
@@ -105,9 +110,41 @@
                         <% } %>
                     </div>
                 </div>
-                <div class="tab-pane" id="link2">
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label for="image" class="bmd-label-static">
+                            イメージ
+                        </label>
+                        <input type="text" class="form-control" name="image" id="image" placeholder="" maxlength=256
+                            value="<%= forms.image %>">
+                        <span class="bmd-help">イメージURLをご入力ください</span>
+                        <% if (errors && errors['image']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['image'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="color" class="bmd-label-static">
+                            カラー
+                        </label>
+                        <input type="text" class="form-control" name="color" id="color" placeholder="" maxlength=32
+                            value="<%= forms.color %>">
+                        <% if (errors && errors['color']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['color'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
                 </div>
             </div>
 
+            <div class="tab-pane" id="link2">
+                <%- include('../common/part/_additionalProperty', {
+                    additionalProperty: forms.additionalProperty
+                }) %>
+            </div>
         </div>
     </div>
