--- a/views/accountTitles/accountTitleSet/index.ejs
+++ b/views/accountTitles/accountTitleSet/index.ejs
@@ -67,6 +67,7 @@ AT-04
                                     <th>コード</th>
                                     <th>科目分類</th>
                                     <th>名称</th>
+                                    <th>追加特性</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -85,6 +86,12 @@ AT-04
                                         </a>
                                     </td>
                                     <td name="name|slice">$name$</td>
+                                    <td name="codeValue__addtionalProperty">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty"
+                                            data-codeValue="$codeValue$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -105,7 +112,7 @@ AT-04
         </div>
     </div>
 
-    <div class="modal fade" id="modal-additionalProperty" tabindex="-1">
+    <div class="modal fade" id="modal-accountTitleSet" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
