--- a/views/accountTitles/accountTitleCategory/index.ejs
+++ b/views/accountTitles/accountTitleCategory/index.ejs
@@ -57,6 +57,7 @@ AT-07
                                 <tr>
                                     <th>コード</th>
                                     <th>名称</th>
+                                    <th>追加特性</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -68,6 +69,12 @@ AT-07
                                         </a>
                                     </td>
                                     <td name="name|slice">$name$</td>
+                                    <td name="codeValue__addtionalProperty">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty"
+                                            data-codeValue="$codeValue$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -88,7 +95,7 @@ AT-07
         </div>
     </div>
 
-    <div class="modal fade" id="modal-additionalProperty" tabindex="-1">
+    <div class="modal fade" id="modal-accountTitleCategory" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
