--- a/views/places/screeningRoom/form.ejs
+++ b/views/places/screeningRoom/form.ejs
@@ -27,34 +27,26 @@
             <div class="tab-pane active show" id="link1">
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
-                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                        <label for="containedInPlace" class="bmd-label-static">
                             施設
                         </label>
-                        <% if (isNew) { %>
-                        <select class="form-control" name="containedInPlace[branchCode]">
-                            <option value="">選択してください</option>
-                            <% for (const movieTheater of movieTheaters) { %>
-                            <option value="<%= movieTheater.branchCode %>"
-                                <% if (forms.containedInPlace !== undefined && movieTheater.branchCode === forms.containedInPlace.branchCode) { %>
-                                selected<% } %>>
-                                <%= movieTheater.name.ja %>
-                            </option>
+                        <select class="form-control" name="containedInPlace" id="containedInPlace" style="width: 100%;"
+                            <% if (!isNew) { %> disabled="disabled" <% } %>>
+                            <% if (forms.containedInPlace !== undefined) { %>
+                            <option value="<%= JSON.stringify(forms.containedInPlace) %>" selected="selected">
+                                <%= forms.containedInPlace.name.ja %></option>
                             <% } %>
                         </select>
-                        <% } else { %>
-                        <select class="form-control" disabled>
-                            <% for (const movieTheater of movieTheaters) { %>
-                            <option value="<%= movieTheater.branchCode %>"
-                                <% if (movieTheater.branchCode === forms.containedInPlace.branchCode) { %>
-                                selected<% } %>>
-                                <%= movieTheater.name.ja %>
-                            </option>
-                            <% } %>
-                        </select>
-                        <input type="hidden" name="containedInPlace[branchCode]"
-                            value="<%= forms.containedInPlace.branchCode %>">
+                        <% if (!isNew) { %>
+                        <input type="hidden" name="containedInPlace"
+                            value="<%= JSON.stringify(forms.containedInPlace) %>">
                         <% } %>
 
+                        <% if (errors && errors.containedInPlace) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.containedInPlace.msg %>
+                        </span>
+                        <% } %>
                     </div>
 
                     <div class="form-group bmd-form-group col-md-3">
