--- a/views/places/seat/form.ejs
+++ b/views/places/seat/form.ejs
@@ -27,35 +27,23 @@
             <div class="tab-pane active show" id="link1">
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
-                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                        <label for="movieTheater" class="bmd-label-static">
                             施設
                         </label>
-                        <% if (isNew) { %>
-                        <select class="form-control"
-                            name="containedInPlace[containedInPlace][containedInPlace][branchCode]">
-                            <option value="">選択してください</option>
-                            <% for (const movieTheater of movieTheaters) { %>
-                            <option value="<%= movieTheater.branchCode %>">
-                                <%= movieTheater.name.ja %>
-                            </option>
+                        <select class="form-control" name="movieTheater" id="movieTheater" style="width: 100%;"
+                            <% if (!isNew) { %> disabled="disabled" <% } %>>
+                            <% if (forms.movieTheater !== undefined) { %>
+                            <option value="<%= JSON.stringify(forms.movieTheater) %>" selected="selected">
+                                <%= forms.movieTheater.name.ja %></option>
                             <% } %>
                         </select>
-                        <% } else { %>
-                        <select class="form-control" disabled>
-                            <% for (const movieTheater of movieTheaters) { %>
-                            <option value="<%= movieTheater.branchCode %>"
-                                <% if (movieTheater.branchCode === forms.containedInPlace.containedInPlace.containedInPlace.branchCode) { %>
-                                selected<% } %>>
-                                <%= movieTheater.name.ja %>
-                            </option>
-                            <% } %>
-                        </select>
-                        <input type="hidden" name="containedInPlace[containedInPlace][containedInPlace][branchCode]"
-                            value="<%= forms.containedInPlace.containedInPlace.containedInPlace.branchCode %>">
+                        <% if (!isNew) { %>
+                        <input type="hidden" name="movieTheater" value="<%= JSON.stringify(forms.movieTheater) %>">
                         <% } %>
-                        <% if (errors && errors['containedInPlace.containedInPlace.containedInPlace.branchCode']) { %>
+
+                        <% if (errors && errors['movieTheater']) { %>
                         <span class="bmd-help text-danger d-block">
-                            <%- errors['containedInPlace.containedInPlace.containedInPlace.branchCode'].msg %>
+                            <%- errors['movieTheater'].msg %>
                         </span>
                         <% } %>
                     </div>
