--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -173,8 +173,8 @@ Aa-4
                                             href="/events/screeningEventSeries/$superEvent.id$/update">$superEvent.name.ja$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
                                     </td>
-                                    <td name="superEvent.location.branchCode">
-                                        $superEvent.location.branchCode$
+                                    <td name="superEvent.location.name.ja|slice">
+                                        $superEvent.location.name.ja$
                                     </td>
                                     <td name="location.name.ja|slice">
                                         $location.name.ja$
