--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -25,7 +25,7 @@
                     <li class="nav-item <%= (displayId === 'MT-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/places/movieTheater">
                             <span class="sidebar-mini"><i class="material-icons">business</i></span>
-                            <span class="sidebar-normal">施設(劇場)</span>
+                            <span class="sidebar-normal">施設</span>
                         </a>
                     </li>
                     <li class="nav-item <%= (displayId === 'SR-01') ? 'active': ''; %>">
