--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -13,14 +13,14 @@
                         <form>
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-4 film">
-                                    <label class="bmd-label-static" for="doorTime">コンテンツ</label>
+                                    <label class="bmd-label-static" for="">施設コンテンツ</label>
                                     <input class="form-control" disabled type="text">
                                 </div>
                             </div>
 
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-4 theater">
-                                    <label class="bmd-label-static" for="startTime">施設</label>
+                                    <label class="bmd-label-static" for="">施設</label>
                                     <input class="form-control" disabled type="text">
                                 </div>
                                 <div class="form-group bmd-form-group col-md-4 screen">
