- スマートシアター新旧クライアントに対する動作保証対応

--- a/views/offers/form.ejs
+++ b/views/offers/form.ejs
@@ -231,7 +231,7 @@
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-12">
                         <label for="availableAtOrFrom[][id]" class="bmd-label-static">
-                            利用状況
+                            利用可能アプリケーション
                         </label>
 
                         <% applications.forEach((application) => { %>
