--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -31,7 +31,7 @@
                     <li class="nav-item <%= (displayId === 'SR-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/places/screeningRoom">
                             <span class="sidebar-mini"><i class="material-icons">theaters</i></span>
-                            <span class="sidebar-normal">ルーム(スクリーン)</span>
+                            <span class="sidebar-normal">ルーム</span>
                         </a>
                     </li>
 
@@ -129,7 +129,7 @@
                     <li class="nav-item <%= (displayId === 'OF-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/offers">
                             <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
-                            <span class="sidebar-normal">単価オファー(券種)</span>
+                            <span class="sidebar-normal">単価オファー</span>
                         </a>
                     </li>
                     <li class="nav-item <%= (displayId === 'OC-01') ? 'active': ''; %>">
