--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -166,9 +166,8 @@
                                 </a>
                             </td>
                             <td
-                                name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss__validRateLimitStr">
-                                $validFrom$ ~ $validThrough$<br>
-                                $validRateLimitStr$
+                                name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss">
+                                $validFrom$ ~ $validThrough$
                             </td>
                             </td>
                             <td name="id__addOnCount">
